Various improvements to pagination
- Refactor construction of pagination prev/next links
- Add `Link` response header with pagination links for CSV formatted
  data set queries
- Move pagination params out of data set query body into query string
- Create `self` links in consistent way
